css/styles.css
/* ... */
h2 {
  text-transform: uppercase;
  color: #fff;
  font-family: 'Gotham Rounded Book', sans-serif;
}

.link-items .list-1 a {
  color: #d35266;
}

.link-items,
.logo,
.input-fields2,
.input-fields {
  justify-content: center;
}

.h4 {
  font-size: 19px;
}

.link-items,
.right,
.user-info,
.logo {
  display: flex;
  align-items: center;
}

.logo img {
  width: 50px;
  height: 50px;
}

.logo,
.counter-envelop {
  position: relative;
}

.music-img {
  position: absolute;
}

.counter-envelop {
  margin-right: 19px;
}

.counter {
  color: #fff;
  width: 13px;
  height: 13px;
  border-radius: 50%;
  background-color: red;
  font-size: 10px;
  text-align: center;
  font-weight: 700;
  position: absolute;
  top: 0;
  left: 9px;
}

.user-info p {
  color: #fff;
  padding-right: 12px;
  margin-top: 10px;
}

.link-item-1 {
  display: flex;
}

.input-fields,
.input-fields2 {
  padding-top: 23px;
  display: flex;
}

.button {
  background-color: #383838;
  padding: 12px;
  width: 120px;
  border-radius: 3px;
  margin-left: 12px;
  color: #888;
}

.search-input,
.location {
  padding: 12px;
  width: 300px;
}

.results-options2 {
  width: 150px;
}

.button2 {
  background-color: #383838;
  padding: 12px;
  width: 150px;
  border-radius: 3px;
  margin-left: 12px;
  color: #888;
}

/* =====> media queries <====== */

@media (max-width: 768px) {


  .nav-bar {
    background: linear-gradient(to right, #000, #434343);
    display: flex;
    padding: 5px;
    box-shadow: 0 9px 12px 0 #ff0084, 0 9px 20px 0 red;
    width: 100%;
    height: 60px;
  }

  .items2 {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    grid-gap: 1.2em;
  }

  /*
  .link-items {
    display: flex;
    padding: 8px;
  } */

  .link-items li {
    margin: 5px auto;
    position: relative;
    right: 23px;
  }

  .right {
    justify-content: space-around;
    margin-right: 12px;
  }

  .user-info,
  .right {
    display: flex;
    align-items: center;
  }

  .list-1 {
    margin: auto;
  }

  .user-info,
  .input-fields,
  .input-fields2 {
    justify-content: center;
  }

  .list-1 img,
  .list img {
    position: relative;
    top: 13px;
  }

  .info{
    font-size: 13px;
  }

  .list img {
    width: 8px;
  }
  .product img, .sales-info, .btn-grp .purchase-btn{
    width: 100%;
  }

  .hot-deal{
    max-width: 60%;
  }

  .display-4 {
    font-size: 25px;
    font-weight: 500;
  }

  .input-fields,
  .input-fields2 {
    padding-top: 23px;
    display: flex;
    flex-direction: column;
  }

  .product {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 12px;
  }


  .purchase-btn, .price-btn, .author, .cover .hot{
    font-size: 12px;
  }

  .main-footer {
    display: flex;
    margin-top: 56px;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
  }

  .categories {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
  }

  .copyright {
    border-top: 1px #ccc solid;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  .sales-info {
    width: 100%;
    font-size: 15px;
  }

  .d-flex {
    display: flex;
    flex-direction: column;
  }

  .button-post {
    width: 50px;
    height: 18px;
    font-size: 6px;
    margin-left: 7px;
  }

  .list,
  .list-1 {
    font-size: 10px;
  }

  .texts,
  .category1,
  .category2,
  .copyright-item {
    font-size: 14px;
  }

  .aco {
    margin-right: 32px;
  }

  .aco2 {
    font-size: 13px;
  }

  .shops-items {
    padding-top: 12px;
    border-top: 3px #ccc solid;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    grid-gap: 1.2em;
  }

  .items {
    display: grid;
    grid-template-columns: 200px 200px;
    grid-template-rows: auto;
    grid-gap: 1.2em;
  }

  .d-flex,
  .d-flex .Ex,
  .view-all {
    width: 100%;
    font-size: 12px;
  }

  .carts img {
    width: 100px;
    height: 100px;
  }

  .details .lead {
    font-size: 12px;
    width: 100%;
    font-weight: 500;
  }

  .bottom-item {
    margin-bottom: 15px;
  }

  .display-5 {
    font-size: 18px;
  }

  .learn {
    font-size: 12px;
  }

  .logo img,
  .list-1 img,
  .avatar img,
  .evelop {
    width: 10px;
  }

  .cover-music {
    margin-left: 12px;
  }

  .cover-music h2 {
    font-size: 12px;
  }

  .user-info p {
    font-size: 10px;
    font-weight: 400;
  }

  .counter {
    width: 10px;
    height: 10px;
    font-size: 8px;
  }

  .buy-sell,
  .buy-sell2 {
    font-size: 17px;
    margin-top: 5px;
  }

  .input-fields,
  .results-options,
  .results-options2,
  .input-fields2 {
    width: 300px;
    margin: auto;
  }

  .input-fields input,
  .input-fields2 input {
    margin-top: 3px;
  }

  .buy-sell2 {
    color: #fff;
    text-align: center;
    margin: auto;
  }

  .button,
  .button2 {
    background-color: #383838;
    width: 300px;
    border-radius: 3px;
    color: #888;
    margin: 0 auto;
    padding: 4px;
  }

  .h2,
  .h3 {
    box-shadow: 0 9px 12px 0 #ff0084, 0 9px 20px 0 red;
    border: 1px #ccc solid;
    width: 200px;
    height: 50px;
    margin: auto;
    border-radius: 10px;
    padding-top: 12px;
  }

  .more-contents2 {
    padding: 10px;
  }
}
/* ... */

